--- a/Program 5/index.html
+++ b/Program 5/index.html
@@ -1,123 +1,7 @@
 <html>
 <head>
     <title>JYOTHY INSTITUTE OF TECHNOLOGY - Campus Chronicle</title>
-    <style>
-        body {
-            font-family: Georgia, serif;
-            line-height: 1.6;
-            color: #333;
-            max-width: 1200px;
-            margin: 0 auto;
-            padding: 20px;
-            background-color: whitesmoke;
-        }
-
-        header {
-            background-color: #1a1a1a;
-            color: #fff;
-            padding: 20px;
-            text-align: center;
-        }
-
-        header h1 {
-            margin: 0;
-            font-size: 1.5em;
-        }
-
-        nav {
-            background-color: #333;
-            color: #fff;
-            padding: 10px;
-        }
-
-        nav ul {
-            list-style-type: none;
-            padding: 0;
-            margin: 0;
-            display: flex;
-            justify-content: center;
-        }
-
-        nav ul li {
-            margin: 0 10px;
-        }
-
-        nav ul li a {
-            color: #fff;
-            text-decoration: none;
-        }
-
-        main {
-            display: flex;
-            gap: 20px;
-            margin-top: 20px;
-        }
-
-        section {
-            flex: 2;
-        }
-
-        article {
-            background-color: #fff;
-            padding: 20px;
-            margin-bottom: 20px;
-            box-shadow: 0 0 10px rgba(0,0,0,1);
-        }
-
-        article h2 {
-            color: #1a1a1a;
-            font-size: 1.5em;
-        }
-
-        aside {
-            flex: 1;
-            background-color: #e6e6e6;
-            padding: 20px;
-            box-shadow: 0 0 10px rgba(0,0,0,1);
-        }
-
-        figure {
-            margin: 0;
-            text-align: center;
-        }
-
-        figure img {
-            max-width: 100%;
-            height: auto;
-            width: 500px;
-            height: 400px;
-        }
-
-        figcaption {
-            font-style: italic;
-            color: #666;
-            font-size: 0.9em;
-        }
-
-        table {
-            width: 100%;
-            border-collapse: collapse;
-            margin-bottom: 20px;
-        }
-
-        th, td {
-            border: 1px solid #ddd;
-            padding: 10px;
-            text-align: left;
-        }
-
-        th {
-            background-color: #f2f2f2;
-        }
-
-        footer {
-            background-color: #1a1a1a;
-            color: #fff;
-            text-align: center;
-            padding: 10px;
-            margin-top: 20px;
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
